--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=nexgenbank-back
+
+spring.flyway.url=${DB_URL}
+spring.flyway.user=${DB_USERNAME}
+spring.flyway.password=${DB_PASSWORD}
